# AndroidIPC

./: README.md  settings.gradle.kts
aidl/: build.gradle.kts
aidl/src/androidTest/java/com/pujh/aidl/: ExampleInstrumentedTest.java
aidl/src/main/: AndroidManifest.xml
aidl/src/main/aidl/com/pujh/aidl/: ICallback.aidl  IUserManager.aidl  User.aidl
aidl/src/main/java/com/pujh/aidl/: MainActivity.java  RemoteService.java  User.java
aidl/src/main/res/layout/: activity_main.xml
aidl/src/main/res/values-night/: themes.xml
aidl/src/test/java/com/pujh/aidl/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
messenger/: build.gradle.kts
messenger/src/androidTest/java/com/pujh/messenger/: ExampleInstrumentedTest.java
messenger/src/main/java/com/pujh/messenger/: MainActivity.java  RemoteService.java  User.java
messenger/src/main/res/layout/: activity_main.xml
messenger/src/test/java/com/pujh/messenger/: ExampleUnitTest.java
socket/: build.gradle.kts
socket/src/androidTest/java/com/pujh/socket/: ExampleInstrumentedTest.java
socket/src/main/: AndroidManifest.xml
socket/src/main/cpp/: CMakeLists.txt  client.cpp  server.cpp  server_epoll.cpp  server_thread.cpp  socket.cpp  socket.h
socket/src/main/java/com/pujh/socket/: LocalSocketClient.java  LocalSocketServer.java  MainActivity.java  RemoteService.java
socket/src/main/res/layout/: activity_main.xml
socket/src/main/res/values/: themes.xml
socket/src/test/java/com/pujh/socket/: ExampleUnitTest.java
